src/ui/lidarr_ui/library/snapshots/managarr__ui__lidarr_ui__library__artist_details_ui__artist_details_ui_tests__tests__snapshot_tests__artist_details_ManualArtistSearchConfirmPrompt_2.snap
---
source: src/ui/lidarr_ui/library/artist_details_ui_tests.rs
expression: output
---
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
        ╭  Alex  ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮        
        │Artist: Alex                                                                                                                                       │        
        │Overview: some interesting description of the artistShe was born in Madison, Wisconsin: a city she has never really left.Her first album took her  │        
        │seven years to finish.                                                                                                                             │        
        │Disambiguation: American pianist                                                                                                                   │        
        │Type: Person                                                                                                                                       │        
        │Status: Continuing                                                                                                                                 │        
        │Genres: soundtrack                                                                                                                                 │        
        │Rating: 84%                                                                                                                                        │        
        │Path: /nfs/music/test-artist                                                                                                                       │        
        │Quality Profile: Lossless                                                                                                                          │        
        │Metadata Profile: Standard                                                                                                                         │        
        │Monitored: Yes                           ╭─────────────────  Download Rejected Release  ──────────────────╮                                        │        
        │Albums: 1                                │    Do you really want to download the rejected release: Test   │                                        │        
        │Tracks: 12/15                            │                            Release?                            │                                        │        
        │╭  Artist Details  ──────────────────────│                                                                │───────────────────────────────────────╮│        
        ││ Albums │ History │ Manual Search       │                                                                │                                       ││        
        ││────────────────────────────────────────│Rejection reasons:                                              │───────────────────────────────────────││        
        ││   Source ▼  Age        ⛔     Title     │• Unknown quality profile                                       │e         Peers        Quality         ││        
        ││=> torrent   1 days     ⛔     Test Relea│• Release is already mapped                                     │ GB       2 / 1        Lossless        ││        
        ││   usenet    1 days     ⛔     Test Relea│                                                                │ GB                    Lossless        ││        
        ││                                        │                                                                │                                       ││        
        ││                                        │                                                                │                                       ││        
        ││                                        │                                                                │                                       ││        
        ││                                        │                                                                │                                       ││        
        ││                                        │                                                                │                                       ││        
        ││                                        │                                                                │                                       ││        
        ││                                        │                                                                │                                       ││        
        ││                                        │╭──────────────────────────────╮╭──────────────────────────────╮│                                       ││        
        ││                                        ││              Yes             ││              No              ││                                       ││        
        ││                                        │╰──────────────────────────────╯╰──────────────────────────────╯│                                       ││        
        ││                                        ╰────────────────────────────────────────────────────────────────╯                                       ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        │╰─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯│        
        ╰───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
