src/ui/lidarr_ui/library/snapshots/managarr__ui__lidarr_ui__library__artist_details_ui__artist_details_ui_tests__tests__snapshot_tests__artist_details_ManualArtistSearch_2.snap
---
source: src/ui/lidarr_ui/library/artist_details_ui_tests.rs
expression: output
---
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
        ╭  Alex  ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮        
        │Artist: Alex                                                                                                                                       │        
        │Overview: some interesting description of the artistShe was born in Madison, Wisconsin: a city she has never really left.Her first album took her  │        
        │seven years to finish.                                                                                                                             │        
        │Disambiguation: American pianist                                                                                                                   │        
        │Type: Person                                                                                                                                       │        
        │Status: Continuing                                                                                                                                 │        
        │Genres: soundtrack                                                                                                                                 │        
        │Rating: 84%                                                                                                                                        │        
        │Path: /nfs/music/test-artist                                                                                                                       │        
        │Quality Profile: Lossless                                                                                                                          │        
        │Metadata Profile: Standard                                                                                                                         │        
        │Monitored: Yes                                                                                                                                     │        
        │Albums: 1                                                                                                                                          │        
        │Tracks: 15/15                                                                                                                                      │        
        │╭  Artist Details  ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮│        
        ││ Albums │ History │ Manual Search                                                                                                                ││        
        ││─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────││        
        ││   Source ▼  Age        ⛔     Title                                              Indexer               Size         Peers        Quality         ││        
        ││=> torrent   1 days     ⛔     Test Release                                       kickass torrents      0.0 GB       2 / 1        Lossless        ││        
        ││   usenet    1 days     ⛔     Test Release                                       DrunkenSlug           0.0 GB                    Lossless        ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        │╰─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯│        
        ╰───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
